[IMP] improvements on offers, better layout for kanban, correct the progress bar (and store it, was too long to display them), added useful group by filters

--- a/specific_parts/specific-addons/qoqa_offer/static/src/css/qoqa_offer.css
+++ b/specific_parts/specific-addons/qoqa_offer/static/src/css/qoqa_offer.css
@@ -1,38 +1,135 @@
-.openerp .oe_kanban_offer .oe_kanban_offer {
-    width: 250px;
-    min-height: 160px;
+.openerp .oe_kanban_offer {
+  width: 350px;
+  min-height: 160px;
 }
 
-.openerp .oe_kanban_offer .qoqa_date_left {
-    float: left;
-    margin: 8px;
+.openerp .oe_kanban_offer .header {
+  text-align: right;
+  font-size: 120%;
+  height: 30px;
+
+  padding: 4px 4px;
+  border-bottom: 1px solid #cacaca;
+  background-color: #ededed;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#fcfcfc), to(#dedede));
+  background-image: -webkit-linear-gradient(top, #fcfcfc, #dedede);
+  background-image: -moz-linear-gradient(top, #fcfcfc, #dedede);
+  background-image: -ms-linear-gradient(top, #fcfcfc, #dedede);
+  background-image: -o-linear-gradient(top, #fcfcfc, #dedede);
+  background-image: linear-gradient(to bottom, #fcfcfc, #dedede);
+  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4), 0 0 9px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4), 0 0 9px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4), 0 0 9px rgba(0, 0, 0, 0.1);
 }
 
-.openerp .oe_kanban_offer .qoqa_date_right {
-    float: right;
-    margin: 8px;
+.openerp .oe_kanban_offer .qoqa_name {
+  font-size: 110%;
+  font-weight: bold;
+}
+
+.openerp .oe_kanban_offer .qoqa_name span.qoqa_main_brand {
+  font-size: 130%;
 }
 
 .openerp .oe_kanban_offer .oe_kanban_image {
-    float: left;
-    margin: 4px;
+  float: left;
+  margin: 4px;
+}
+
+.openerp .oe_kanban_offer .qoqa_left_box {
+  width: 45%;
+  float: left;
+  /* margin: 4px; */
+}
+
+.openerp .oe_kanban_offer .qoqa_right_box {
+  float: left;
+  width: 45%;
+  /* margin: 4px; */
+}
+
+.openerp .oe_kanban_offer .oe_kanban_image.oe_qoqa_shop {
+  width: 88px;
+  height: 28px;
 }
 
 .openerp .oe_kanban_offer div.header {
-    padding: 4px 4px;
-    background-color: lightgrey;
 }
 
 .openerp .oe_kanban_offer div.dates {
-    font-size: 80%;
+  font-size: 80%;
 }
 
 .oe_kanban_offer .oe_ellipsis {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-height: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 100px;
 }
 
-.oe_kanban_offer progress {
-    width: 100%;
+/* override all progress bars on OpenERP with a QoQa style*/
+/* Documentation on progress bar:
+ * http://css-tricks.com/html5-progress-element/
+ */
+
+progress[value] {
+  /* Reset the default appearance */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  /* Get rid of default border in Firefox */
+  border: none;
+
+  /* For IE10 */
+  color: #CA4791;
+}
+
+progress[value]::-webkit-progress-bar {
+  background: #ededed;
+  border-radius: 15px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+}
+
+progress[value]::-webkit-progress-value {
+  background-image:
+  -webkit-linear-gradient(#CF659B, #CA4791);
+  border-radius: 15px;
+  background-size: 35px 20px, 100% 100%, 100% 100%;
+}
+
+progress[value]::-moz-progress-bar {
+  background: #ededed;
+  background-image:
+  -moz-linear-gradient(#CF659B, #CA4791);
+  border-radius: 15px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+  background-size: 35px 20px, 100% 100%, 100% 100%;
+}
+
+.oe_kanban_offer progress[value] {
+  width: 100%;
+  height: 14px;
+}
+
+.oe_kanban_offer .qoqa_buttons a.oe_kanban_button {
+  padding: 8px;
+  display: block;
+  cursor: pointer;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#CF659B), to(#CA4791));
+  background-image: -webkit-linear-gradient(top, #CF659B, #CA4791);
+  background-image: -moz-linear-gradient(top, #CF659B, #CA4791);
+  background-image: -ms-linear-gradient(top, #CF659B, #CA4791);
+  background-image: -o-linear-gradient(top, #CF659B, #CA4791);
+  background-image: linear-gradient(to bottom, #CF659B, #CA4791);
+  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4), 0 0 9px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4), 0 0 9px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4), 0 0 9px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  font-size: 100%;
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(177, 51, 113);
+}
+.oe_kanban_offer .qoqa_buttons a.oe_kanban_button:hover,
+.oe_kanban_offer .qoqa_buttons a.oe_kanban_button:active {
+  box-shadow: 0px -1px 20px 0px rgba(0, 0, 0, 0.3) inset;
 }
